<resources>
    <string name="app_name">MOBIFARMER</string>
    <string name="logout">Logout</string>
    <string name="customer_register">Customer Register</string>
    <string name="cusername">Username:</string>
    <string name="cosenter_your_name">Enter your name</string>
    <string name="cospassword">Password:</string>
    <string name="cosenter_your_password">Enter your password</string>
    <string name="cosemail">Email:</string>
    <string name="cosenter_your_email">Enter your email</string>
    <string name="coslocation">Location:</string>
    <string name="cosenter_your_location">Enter your location</string>
    <string name="coscrop">Crop:</string>
    <string name="cosenter_your_crop">Enter your crop</string>
    <string name="cosphone_no">Phone no:</string>
    <string name="cosenter_your_phoneno">Enter your phoneno</string>
    <string name="cosdate">Date:</string>
    <string name="cosenter_your_stock_date">Enter your stock date</string>
    <string name="cossend">Send</string>
    <string name="cosalready_sign_up_login">Already Sign up? Login</string>
    <string name="customer_login">CUSTOMER LOGIN</string>
    <string name="clpass">PASSWORD</string>
    <string name="clname">NAME</string>
    <string name="cllogin">LOGIN</string>
    <string name="clno_of_attempts">No of attempts :</string>
    <string name="clnew_user_sign_up">New User?Sign Up</string>
    <string name="clchange_password">Change Password ?</string>
    <string name="farmer_login">FARMER LOGIN</string>
    <string name="name">NAME</string>
    <string name="password1">PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="no_of_attempts">No of attempts :</string>
    <string name="new_user_sign_up">New User?Sign Up</string>
    <string name="change_password">Change Password ?</string>
    <string name="farmer_register">Farmer Register</string>
    <string name="farusername">Username:</string>
    <string name="farenter_your_name">Enter your name</string>
    <string name="farpassword">Password:</string>
    <string name="farenter_your_password">Enter your password</string>
    <string name="faremail">Email:</string>
    <string name="farenter_your_email">Enter your email</string>
    <string name="farlocation">Location:</string>
    <string name="farenter_your_location">Enter your location</string>
    <string name="fardate">Date:</string>
    <string name="farcrop">Crop:</string>
    <string name="farenter_your_phoneno">Enter your phoneno</string>
    <string name="farenter_your_crop">Enter your crop</string>
    <string name="farphone_no">Phone no:</string>
    <string name="farenter_your_stock_date">Enter your stock date</string>
    <string name="farsend">Send</string>
    <string name="faralready_sign_up_login">Already Sign up? Login</string>
    <string name="username">Username:</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_crop">Enter your crop</string>
    <string name="homcustomer">CUSTOMER</string>
    <string name="homfarmer">FARMER</string>
    <string name="mobifarmer">MOBIFARMER</string>
    <string name="ftodo">TODO</string>
    <string name="ctodo">TODO</string>
    <string name="chenter_your_email">Enter your email</string>
    <string name="chchange_password">change password</string>

</resources>
