<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6473B"
    tools:context=".farmerregis">




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/farmer_register"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="183dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/username"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <EditText
                    android:id="@+id/editusername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/farenter_your_name"
                    android:inputType="textPersonName"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:autofillHints="" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pass"
                    android:layout_width="218dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/farpassword"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <EditText
                    android:id="@+id/etpass"
                    android:layout_width="319dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/farenter_your_password"
                    android:inputType="textPassword"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:autofillHints="" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="218dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/faremail"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="319dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/enter_your_email"
                    android:inputType="textEmailAddress"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:autofillHints="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="185dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/farlocation"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <EditText
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/farenter_your_location"
                    android:inputType="textPersonName"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:autofillHints="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="183dp"
                    android:layout_height="51dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/farcrop"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <EditText
                    android:id="@+id/crop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/enter_your_crop"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:autofillHints="" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="185dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/farphone_no"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <EditText
                    android:id="@+id/phoneno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/farenter_your_phoneno"
                    android:inputType="phone"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:autofillHints="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="185dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/fardate"
                    android:textAlignment="textEnd"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <EditText
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/farenter_your_stock_date"
                    android:inputType="date"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:typeface="sans"
                    android:autofillHints="" />

            </LinearLayout>

            <Button
                android:id="@+id/btnsend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_red_dark"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/farsend"
                android:textAlignment="center"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="30sp"
                android:textStyle="bold"
                android:typeface="sans" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/faralready_sign_up_login"
                    android:textAlignment="center"
                    android:textColor="@android:color/holo_blue_light"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:typeface="sans" />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>




